--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "data-spreadsheet"
   ],
   "dependencies": {
-    "handsontable": "0.37.0",
-    "hot-formula-parser": "^2.3.1",
+    "handsontable": "git+https://github.com/nkchinh/handsontable.git",
+    "hot-formula-parser": "git+https://github.com/nkchinh/formula-parser.git",
     "moment": "2.20.1",
     "numbro": "1.11.0",
     "pikaday": "1.5.1"
